@@ -1,5 +1,6 @@
 master
 - Mayhem
+  Add /an/, /k/, /toy/ and /x/ archived image redirection.
   One-word-captcha now works in the report window.
   Fix duplicate file upload error link.
 
